tests/baselines/reference/classStaticBlockUseBeforeDef2.errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlockUseBeforeDef2.ts(3,14): error TS2729: Property 'x' is used before its initialization.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlockUseBeforeDef2.ts (1 errors) ====
    class C {
        static {
            this.x = 1;
                 ~
!!! error TS2729: Property 'x' is used before its initialization.
!!! related TS2728 tests/cases/conformance/classes/classStaticBlock/classStaticBlockUseBeforeDef2.ts:5:12: 'x' is declared here.
        }
        static x;
    }